syntax = "proto3";
package io.products.productAttributeValue.action;

option java_outer_classname = "ProductAttributeValueActionApi";

import "kalix/annotations.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service ProductAttributeValueAction {
    option (kalix.codegen) = {
      action: {}
    };
  
    rpc CreateProductAttributeValue(ProductAttributeValue) returns (google.protobuf.Empty)  {
      option (google.api.http) = {
          post: "/create_product_attribute_value_impl"
          body: "*"
      };
    }

    // rpc UpdateProduct(ProductApi.Product) returns (Product) {
    //   option (google.api.http) = {
    //       put: "/product/{id}"
    //       body: "*"
    //   };
    // }

    // rpc DeleteProduct(ProductApi.Product) returns (Product) {
    //   option (google.api.http) = {
    //       put: "/product/{id}/delete"
    //       body: "*"
    //   };
    // }

}

message ProductAttributeValue {
  string value_id = 1  [(kalix.field).entity_key = true];
  string attribute_id = 2;
  string channel_id = 3;
  string value = 4;
}