syntax = "proto3";

package io.products.productAttributeValue.view;
option java_outer_classname = "ProductAttributeValueViewModel";

import "io/products/productAttributeValue/domain/product_attribute_value_domain.proto";
import "google/api/annotations.proto";
import "kalix/annotations.proto";
import "google/protobuf/empty.proto";

service ProductAttributeValueView {
    option (kalix.codegen) = {
      view: {}
    };


    rpc GetProductAttributeValues(ByRoleRequest) returns (ByRoleResponse) {
      option (kalix.method).view.query = {
        query: "SELECT * AS product_attribute_values FROM product_attribute_values"
      };
      option (google.api.http) = {
        post: "/product_attribute_values",
        body: "*"
      };
    }

    rpc UpdateProductAttributeValues(domain.ProductAttributeValueState) returns (domain.ProductAttributeValueState) {
      option (kalix.method).eventing.in = {
        value_entity: "product_attribute_values"
      };
      option (kalix.method).view.update = {
        table: "product_attribute_values"
        // transform_updates: true
      };
    }

    // rpc DeleteProduct(google.protobuf.Empty) returns (domain.ProductState) {
    //   option (kalix.method).eventing.in = {
    //     value_entity: "products"
    //     handle_deletes: true
    //   };
    //   option (kalix.method).view.update = {
    //     table: "products"
    //   };
    // }
  

  }
  
  message ByRoleRequest {
  }

  message ByRoleResponse {
    repeated domain.ProductAttributeValueState product_attribute_values = 1;
  }

